<resources>
    <string name="app_name">Auto Secure Home</string>
    <string name="registration">REGISTRATION:</string>
    <string name="off">OFF</string>
    <string name="controls">CONTROLS:</string>
    <string name="hall_room">Hall Room:</string>
    <string name="hallroom">Hall Room:</string>
    <string name="lights">Lights:</string>
    <string name="fan">Fan:</string>
    <string name="air_conditioner">Air Conditioner:</string>
    <string name="kitchen">Kitchen:</string>
    <string name="exhaust_fan">Exhaust Fan:</string>
    <string name="bedroom">Bedroom:</string>
    <string name="bathroom">Bathroom:</string>
    <string name="waterheater">Water Heater</string>
    <string name="not_a_existing_user_signup_now">Not A Existing User Signup Now!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_a_user_login_now">Already A User Login Now</string>
    <string name="device_i_d">Device I.D.</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="zero_weather">00</string>
    <string name="u2103">℃</string>
    <string name="relative_humidity">Relative Humidity (%)</string>
    <string name="hi">Hi!</string>
    <string name="input_status">Input Status</string>
    <string name="save_changes">Save Changes</string>
    <string name="input_name">Input Name:</string>
    <string name="abouts">About Us</string>
</resources>
